<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tranznexs</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="forgot_password">Opps, I forgot my password</string>
    <string name="key">pk_test_FsrkKQO0L5SvNRuE4MXiJxO700xTQWVcm1</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="country_code">Country Code</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">User Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_address">Address</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_carmake">Car Make</string>
    <string name="hint_carmodel">Car Model</string>
    <string name="hint_cartype">Car Type</string>
    <string name="hint_carnumber">Car Number</string>
    <string name="hint_seatingcapacity">Seating Capacity</string>
    <string name="hint_driving_license">Driving License</string>
    <string name="hint_license_exp_date">License Expiry Date</string>
    <string name="hint_license_plate">License Plate</string>
    <string name="hint_insuarance">Insuarance</string>
    <string name="home_string">Tranznexs</string>
    <string name="enter_pickup_location">Pickup location</string>
    <string name="enter_drop_location">Drop location</string>
    <string name="write_comment">Write a comment</string>
    <string name="home_alert_message">Enter Pickup Locaton</string>
    <string name="forgot_password_screen">Forgot Password</string>
    <string name="one_time_pass">One Time Password</string>
    <string name="Change_password_screen">Change Password</string>
    <string name="crrent_password">Current Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="trip_details">Trip Details</string>
    <string name="track_truck">Tracking</string>
    <string name="pickup_point">PICKUP POINT</string>
    <string name="booking_date">BOOKING DATE</string>
    <string name="drop_point">DROP POINT</string>
    <string name="bike_type">BIKE TYPE</string>
    <string name="distance">DISTANCE</string>
    <string name="apr_trv_time">APPROXIMATE RIDE TIME</string>
    <string name="payment_type">PAYMENT TYPE</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="booking_details">Booking Details</string>
    <string name="cancel_ride">CANCEL RIDE</string>
    <string name="share_eta">SHARE</string>
    <string name="receipt">RECEIPT</string>
    <string name="on_trip">ON TRIP</string>
    <string name="all_trip">Your Rides</string>
    <string name="current_booking">CURRENT BOOKING</string>
    <string name="booking_id">BOOKING ID</string>
    <string name="truck_type_trip">Bike TYPE</string>
    <string name="pending">PENDING BOOKING</string>
    <string name="accepted">ACCEPTED BOOKING</string>
    <string name="user_cancelled">CANCEL BOOKING</string>
    <string name="driver_unavailable">DRIVER UNAVAILABLE</string>
    <string name="driver_arrived">DRIVER ARRIVED</string>
    <string name="completed">COMPLETED BOOKING</string>
    <string name="driver_cancelled">DRIVER CANCELLED</string>
    <string name="rate_card">Rate Card</string>
    <string name="rate_card_category">CATEGORY</string>
    <string name="loading_capacity">Loading Capacity</string>
    <string name="standard">STANDARD</string>
    <string name="basic">BASIC</string>
    <string name="lux">LUXURY</string>
    <string name="extra_charges">EXTRA CHARGES</string>
    <string name="ride_time_charge_day">RIDE TIME CHARGES</string>
    <string name="per_km">per km</string>
    <string name="wait_time_charge">Wait time is chargeable.</string>
    <string name="ride_time_charge_night">RIDE TIME CHARGES (NIGHT)</string>
    <string name="peak_time_charge">PEAK TIME CHARGES</string>
    <string name="peak_time_charges_des">Peak time charges may be applicable during high demand hours and will be conveyed during the booking.This enables us to make more cab available to you.</string>
    <string name="services_tex">SERVICE TAX</string>
    <string name="services_tex_des">Service tax is payable in addition to ride fare.</string>
    <string name="toll_tax">Toll/tax/parking may be charged in your invoice over and above regular pricing.</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="user_profile">Profile</string>
    <string name="name_profile">Name :</string>
    <string name="user_name_profile">User Name :</string>
    <string name="email_profile">Email :</string>
    <string name="mobile_profile">Mobile :</string>
    <string name="prf_date_of_birth">Date Of Birth :</string>
    <string name="prf_gender">Gender :</string>
    <string name="track_the_truck">Track The Car</string>
    <string name="facebook_popup_string">Your account is not yet registered with Tranznexs, would you like to register now?</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="special_locaion_pickup">Special bike pickup may be apply differ charge.</string>
    <string name="select_date">Select Date.</string>
    <string name="select_time">Select Time.</string>
    <string name="please_enter_name">Please provide a first name.</string>
    <string name="please_enter_lname">Please provide a last name.</string>
    <string name="please_min_name">Name muse be four characters.</string>
    <string name="please_min_isername">Username muse be four characters.</string>
    <string name="please_enter_username">Please provide a username.</string>
    <string name="please_country_code">Please provide country code.</string>
    <string name="please_enter_mobile">Please provide mobile number.</string>
    <string name="please_enter_country">Please provide country.</string>
    <string name="please_enter_state">Please provide state.</string>
    <string name="please_enter_city">Please provide city.</string>
    <string name="please_enter_address">Please provide address.</string>
    <string name="please_enter_pincode">Please provide pin code.</string>
    <string name="please_enter_password">Please provide password.</string>
    <string name="please_enter_confirm_password">Please provide conform password.</string>
    <string name="password_length">Password length must be between 6-32 characters</string>
    <string name="password_confirm">Password and confirm password doesn’t match.</string>
    <string name="please_enter_email">Please provide an email.</string>
    <string name="please_enter_valid_email">Please provide an valid email.</string>
    <string name="location_long">Out Station. </string>
    <string name="location_short">You Can\'t select short distance. </string>
    <string name="out_of_country_location">You Can\'t select city out of the country. </string>
    <string name="out_of_location">Out of location. </string>
    <string name="please_enter_date">Please provide a date.</string>
    <string name="please_enter_time">Please provide a time.</string>
    <string name="please_enter_current_password">Please provide current password.</string>
    <string name="please_current_password">Not valid current password.</string>
    <string name="please_enter_new_password">Please provide new password.</string>
    <string name="password_new_length">New password length must be between 6-32 characters</string>
    <string name="password_new_confirm">New Password and confirm password doesn’t match.</string>
    <string name="please_enter_card_number">Please provide an card number.</string>
    <string name="please_enter_expirydate">Please provide an expired date.</string>
    <string name="please_enter_year">Please provide an expired year.</string>
    <string name="please_enter_month">Please provide an expired month.</string>
    <string name="please_enter_cvv">Please provide an cvv.</string>
    <string name="allow_minimum_four_characters">Allow minimum four characters</string>
    <string name="allow_minimum_ten_characters">Allow minimum ten characters</string>
    <string name="emial_valid">Email allow abc@gmail.com</string>
    <string name="password_valid">Please enter both letter &amp; numbers</string>
    <string name="one_time_pass_val">Please provide a one time password.</string>
    <string-array name="currency_array">
        <item>Currency (optional)</item>
        <item>Unspecified</item>
        <item>USD</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cardNumber">Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="save">Save</string>
    <string name="cvc">CVC</string>
    <string name="stripe_form">Stripe Form</string>
    <string name="new_user_sign_up">NEW USER ? SIGN UP NOW!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_logo">Sign in</string>
    <string name="sign_up_logo">Create Profile</string>
    <string name="create_account">Create your account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="forgot_password_logo">FORGOT PASSWORD</string>
    <string name="retrive_password">Retrieve</string>
    <string name="location_logo">L O C A T I O N S</string>
    <string name="reservation">RESERVATION</string>
    <string name="now">RIDE NOW</string>
    <string name="later">RIDE LATER</string>
    <string name="far_breakup">FEES &amp; CHARGES</string>
    <string name="book">BOOK</string>
    <string name="cancel_popup">CANCEL</string>
    <string name="to">TO</string>
    <string name="vehicle_detail">VEHICLE DETAILS</string>
    <string name="payment_detail">PAYMENT DETAILS</string>
    <string name="confirm_request">CONFIRM REQUEST</string>
    <string name="detail">DETAILS</string>
    <string name="location">LOCATIONS</string>
    <string name="submit">Submit</string>
    <string name="book_my_trip">Booking</string>
    <string name="my_trip">My Bookings</string>
    <string name="sign_out">Sign out</string>
    <string name="pending_popup">Pending Booking</string>
    <string name="all">All</string>
    <string name="completed_popup">Completed</string>
    <string name="driv_unavailable">Driver Unavailable</string>
    <string name="cnacel_booking">Cancelled Booking</string>
    <string name="driver_accepted">Driver Accepted</string>
    <string name="a">A</string>
    <string name="p">P</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="cancel_request">CANCEL REQUEST</string>
    <string name="contact">Contact</string>
    <string name="arrival_point">Arrival Point</string>
    <string name="remaining">Remaining</string>
    <string name="coverd">Covered</string>
    <string name="total">Total</string>
    <string name="chnage_password">Change password</string>
    <string name="my_acc">My Account</string>
    <string name="payments">Payments</string>
    <string name="your_ride">Your Rides</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="about">About</string>
</resources>