<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/profile_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/font_20">

            <TextView
                android:id="@+id/txt_sign_in_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_logo"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/sign_up_logo"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/height_25" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/img_add_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/mail_defoult"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@+id/img_add_image"
                    android:textColorHint="@color/dark_gray">

                    <EditText
                        android:id="@+id/edit_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:textColor="@color/black"
                        android:textColorHint="@color/reservation_color"
                        android:imeOptions="actionNext"
                        android:textSize="@dimen/font_16" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_10"
                android:textColorHint="@color/dark_gray">
                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/reservation_color"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/font_16"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_10"
                android:textColorHint="@color/dark_gray">
                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/reservation_color"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/font_16"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_10"
                android:textColorHint="@color/dark_gray">

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/edit_cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/reservation_color"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/font_16"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_10"
                android:textColorHint="@color/dark_gray">
                <EditText
                    android:id="@+id/edit_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/reservation_color"
                    android:textSize="@dimen/font_16"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_marginTop="@dimen/font_10"
                android:id="@+id/edit_dob"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                android:hint="Date of birth"
                android:textColor="@color/black"
                android:gravity="left|center"
                android:textColorHint="@color/dark_gray"
                android:textSize="@dimen/font_16" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:text="Gender" />
                <RadioGroup
                    android:id="@+id/radiogrup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="Male"/>
                    <RadioButton
                        android:id="@+id/female"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"/>
                    <RadioButton
                        android:id="@+id/other"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Others"/>
                </RadioGroup>
            </LinearLayout>

            <CheckBox
                android:layout_marginTop="5dp"
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_gray"
                android:text="terms &amp; conditions" />

            <TextView
                android:id="@+id/alreadyUser"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Already have an account/login"
                android:layout_centerInParent="true"
                android:textSize="@dimen/font_15"
                android:layout_marginTop="@dimen/margin_5"
                android:gravity="center"
                android:textColor="@color/black"/>

            <Button
                android:background="@drawable/rounded_border"
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_15"
                android:text="@string/sign_up"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|center"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_20"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_20"
                android:text=""/>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>