<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/chang_pass_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_header"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20">

            <RelativeLayout
                android:id="@+id/layout_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/margin_15"
                android:paddingLeft="@dimen/margin_15"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/navigation_arrow"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/txt_change_password_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_20"
                    android:textStyle="bold"
                    android:text="@string/chnage_password"
                    android:layout_below="@+id/img_logo"
                    android:layout_marginTop="@dimen/margin_20"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_change_password_logo"
                    android:layout_marginTop="@dimen/margin_20"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10">

                        <EditText
                            android:id="@+id/edit_current_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:hint="@string/crrent_password"
                            android:textSize="@dimen/font_16"
                            android:layout_marginLeft="@dimen/margin_15"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:textColorHint="@color/dark_gray"
                            android:inputType="textPassword"
                            android:singleLine="true"/>

                    </RelativeLayout>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/textbox_bottom_line"
                        android:layout_marginTop="@dimen/margin_10"
                        android:scaleType="fitXY"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_20">

                        <EditText
                            android:id="@+id/edit_new_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:hint="@string/new_password"
                            android:textSize="@dimen/font_16"
                            android:layout_marginLeft="@dimen/margin_15"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:textColorHint="@color/dark_gray"
                            android:inputType="textPassword"
                            android:singleLine="true"/>

                    </RelativeLayout>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/textbox_bottom_line"
                        android:layout_marginTop="@dimen/margin_10"
                        android:scaleType="fitXY"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_20">

                        <EditText
                            android:id="@+id/edit_con_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:hint="@string/confirm_password"
                            android:textSize="@dimen/font_16"
                            android:layout_marginLeft="@dimen/margin_15"
                            android:layout_centerVertical="true"
                            android:background="@android:color/transparent"
                            android:textColorHint="@color/dark_gray"
                            android:inputType="textPassword"
                            android:singleLine="true"/>

                    </RelativeLayout>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/textbox_bottom_line"
                        android:layout_marginTop="@dimen/margin_10"
                        android:scaleType="fitXY"/>

                    <RelativeLayout
                        android:id="@+id/layout_change_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/height_35"
                        android:background="@drawable/rounded_border"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_30"
                        android:minWidth="@dimen/height_200"
                        >

                        <TextView
                            android:id="@+id/txt_change_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="Submit"
                            android:textSize="@dimen/font_15"
                            android:textColor="@color/white"/>
                    </RelativeLayout>

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>